# git-upstream

./: .gitchangelog.rc  .gitignore  .gitreview  .mailmap  .testr.conf  .zuul.yaml  ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  DESCRIPTION  KNOWN-ISSUES.md  README  README.md  README.rst  USAGE.md  build_manpage.py  create_manpage.py  git-hp  git-upstream  ko24.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
bash_completion/: git-upstream  hpgit
contrib/jjb/: defaults.yaml  macros.yaml  mirror.yaml  projects.yaml
contrib/jjb/scripts/: mirror-upstream.bash
debian/: changelog  control  copyright  rules
doc/source/: conf.py  examples.rst  index.rst  installation.rst  intro.rst  mirroring-upstream.rst  quick-start.rst  subcommands.rst  syncing-rereview-all.rst  syncing-review-final.rst  transform_github_links.py  workflows.rst
doc/utils/: build_manpage.py
fixtures-git/: DESCRIPTION  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
fixtures-git/fixtures_git/: __init__.py
fixtures-git/tests/: test_toposort.py
fixtures-git/tests/advanced/: test_fixture.py
functional-tests/: .gitignore  010-test_version_check.sh  020-test_help.sh  030-test_no_local_changes.sh  040-test_simple_rebase.sh  050-test_supersede.sh  060-test_drop.sh  README.md  run_tests.sh  sample-test_name_here.sh
functional-tests/libs/: logging.lib  utils.lib
ghp/: errors.py  log.py  main.py  subcommand.py  version.py
ghp/commands/: __init__.py  drop.py  import_upstream.py  supersede.py
ghp/lib/: __init__.py  note.py  pygitcompat.py  rebaseeditor.py  searchers.py  utils.py
ghp/scripts/: __init__.py  rebase-editor.py
git_upstream/: __init__.py  errors.py  log.py  main.py  rebase_editor.py  subcommand.py  version.py
git_upstream/commands/: __init__.py  _helpers.py  carrying.py  drop.py  help.py  import.py  supersede.py
git_upstream/lib/: __init__.py  carrying.py  drop.py  importupstream.py  note.py  pygitcompat.py  rebaseeditor.py  searchers.py  strategies.py  supersede.py  utils.py
git_upstream/resources/: todo_epilogue_1_7_5.txt  todo_epilogue_2_6_0.txt
git_upstream/scripts/: rebase-editor.py
git_upstream/tests/: base.py  build-test-tree.py  test_commands.py  test_drop.py  test_import.py  test_import_cmd.py  test_log.py  test_searchers.py  test_strategies.py  test_supersede.py  test_utils.py
git_upstream/tests/commands/help/: test_execute.py
git_upstream/tests/commands/import/: test_conflict.py  test_failure.py  test_import.py  test_interactive.py
git_upstream/tests/resources/: commit-msg
git_upstream/tests/searchers/: test_searchers.py
git_upstream/tests/searchers/scenarios/: addition_branch.yaml  additional_branch_multiple_imports.yaml  ambiguous_argument.yaml  basic.yaml  change_merged_after_merge_base_no_previous_import.yaml  changes_approved_after_import_merge.yaml  changes_merge_result_identical_on_both_sides.yaml  changes_merge_result_identical_to_previous.yaml  changes_upload_prior_to_import.yaml  drop_cherry_picked_changes.yaml  drop_cherry_picked_changes_complex.yaml  explict-merge-treesame.yaml  multi_changes_upload_prior_to_import.yaml  old_style_merge_replace_first.yaml  (+4 more)
git_upstream/tests/strategies/: test_strategies.py
tests/: __init__.py  base.py  test_commands.py  test_drop.py  test_log.py  test_supersede.py  test_utils.py
(+23 files in other folders)
