[metadata]
name = git-upstream
author = Darragh Bailey
author-email = dbailey@hp.com
maintainer = Davide Guerri
maintainer-email = davide.guerri@hp.com
home-page = https://pypi.python.org/pypi/git-upstream
summary = git tool to help manage upstream repositories
description-file = README
license = Apache License (2.0)
keywords = git upstream workflow
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[global]
commands = create_manpage.CreateManpage

[files]
packages =
    git_upstream
data_files =
    etc/bash_completion.d = bash_completion/git-upstream

[entry_points]
console_scripts =
    git-upstream = git_upstream.main:main
    rebase-editor = git_upstream.rebase_editor:main
