[metadata]
name = git-upstream
author = Darragh Bailey
author-email = dbailey@hpe.com
home-page = https://pypi.python.org/pypi/git-upstream
summary = git tool to help manage upstream repositories
description-file = DESCRIPTION
license = Apache License (2.0)
keywords = git upstream workflow
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[global]
commands = build_manpage.BuildManpage

[pbr]
skip_changelog = True
manpages = build/man/git-upstream.1

[files]
packages =
    git_upstream
data_files =
    etc/bash_completion.d = bash_completion/git-upstream
extra_files =
    git_upstream/resources/todo_epilogue_2_6_0.txt
    git_upstream/resources/todo_epilogue_1_7_5.txt

[entry_points]
console_scripts =
    git-upstream = git_upstream.main:main
    rebase-editor = git_upstream.rebase_editor:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html

[build_manpage]
output = build/man/git-upstream.1

[easy_install]
