[metadata]
name = fixtures-git
author = Darragh Bailey
author-email = dbailey@hpe.com
home-page = https://pypi.python.org/pypi/fixtures-git
summary = unittest fixture to help testing with git repositories
description-file = DESCRIPTION
license = Apache License (2.0)
keywords = fixtures git
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[pbr]
skip_changelog = True

[files]
packages =
    fixtures_git

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html
